# rendering-fw

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
Dependencies/: CMakeLists.txt
Dependencies/Assimp/: CMakeLists.txt
Dependencies/FreeImage/: CMakeLists.txt
Dependencies/GLFW/: CMakeLists.txt
Dependencies/ImGuiWrapper/: CMakeLists.txt
Dependencies/ImGuiWrapper/wrapper/: ImGuiContext.cpp  ImGuiContext.h  imgui_impl_metal.mm
Dependencies/OptiX6.5/: CMakeLists.txt
Dependencies/OptiX6.5/linux/: liboptixu.so.6.5.0
Dependencies/OptiX7/: CMakeLists.txt
Dependencies/VMA/: CMakeLists.txt  vk_mem_alloc.h
Dependencies/VulkanMemoryAllocator-2.2.0/: CMakeLists.txt
Dependencies/Zlib/: CMakeLists.txt
Dependencies/glew-2.1.0/: CMakeLists.txt
Dependencies/glm-9.9.6/: CMakeLists.txt
Dependencies/glm-9.9.6/glm/detail/: setup.hpp  type_mat4x4.inl
Dependencies/half2.1.0/: CMakeLists.txt  half.hpp
Dependencies/intel-embree-3.6.1/: embree-config-version.cmake  embree-config.cmake
Dependencies/intel-embree-3.6.1/lib/: embree3.lib  tbb.lib  tbbmalloc.lib
Dependencies/intel-embree-3.7.0/linux/: embree-config-version.cmake  embree-config.cmake  embree-vars.csh  embree-vars.sh
Dependencies/intel-embree-3.7.0/linux/lib/: libtbb.so.2  libtbbmalloc.so.2
Dependencies/intel-embree-3.7.0/macos/: embree-config.cmake
Dependencies/intel-embree-3.7.0/windows/: embree-config-version.cmake  embree-config.cmake
Dependencies/intel-embree-3.7.0/windows/doc/: CHANGELOG.md  README.md
Dependencies/intel-embree-3.7.0/windows/lib/: embree3.lib  tbb.lib  tbbmalloc.lib
Dependencies/tinygltf-08-01-2020/: CMakeLists.txt
Dependencies/tinygltf2.2.0/: CMakeLists.txt
Examples/ImGuiApp/: CMakeLists.txt  main.cpp
Examples/MetalApp/: CMakeLists.txt  main.mm
GLRenderer/: CMakeLists.txt
GLRenderer/shaders/: simple.frag  simple.vert
GLRenderer/src/: Context.cpp  Context.h  Mesh.cpp  Mesh.h
ImGuiWrapper/: CMakeLists.txt
ImGuiWrapper/wrapper/: ImGuiContext.cpp  ImGuiContext.h  ImGuiContext.mm
OptiX6Context/: CMakeLists.txt
OptiX6Context/assets/kernels/: disney.h  getShadingData.h  kernels.cu
OptiX6Context/assets/optix-kernels/: Kernels.cu
OptiX6Context/src/: CUDABuffer.h  CheckCUDA.h  OptiXCUDABuffer.h  OptiXMesh.h
RFW/: CMakeLists.txt
RFW/RenderContext/: DeviceStructures.h  RenderContext.h  Structures.h
RFW/RenderSystem/: CMakeLists.txt
RFW/RenderSystem/RenderContext/: BlueNoise.h  CMakeLists.txt  Camera.cpp  Camera.h  RenderContext.cpp  Settings.h  Structures.h
RFW/RenderSystem/RenderContext/bsdf/: compat.h  disney.h  lambert.h  microfacet.h
RFW/RenderSystem/bvh/: CMakeLists.txt
RFW/RenderSystem/bvh/src/: AABB.cpp  BVHTree.cpp  MBVHNode.cpp  MBVHTree.cpp  TopLevelBVH.cpp
RFW/RenderSystem/math/: CMakeLists.txt
RFW/RenderSystem/math/src/: MathIncludes.cpp  MathIncludes.h
RFW/RenderSystem/src/: Application.cpp  Application.h  AssimpObject.cpp  AssimpObject.h  Camera.cpp  Camera.h  GeometryReference.cpp  GeometryReference.h  InstanceReference.cpp  InstanceReference.h  LightReference.cpp  LightReference.h  MaterialList.cpp  MaterialList.h  Quad.cpp  Quad.h  RenderSystem.cpp  RenderSystem.h  SceneTriangles.h  Settings.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  rfw.h
RFW/RenderSystem/src/bsdf/: bsdf.h  compat.h  disney.h  lambert.h  microfacet.h  (+2 more)
RFW/RenderSystem/utils/: CMakeLists.txt
RFW/Renderers/CLRT/: CMakeLists.txt
RFW/Renderers/CPURT/: CMakeLists.txt
RFW/Renderers/CUDART/: CMakeLists.txt
RFW/Renderers/EmbreeRT/: CMakeLists.txt
RFW/Renderers/GLRenderer/: CMakeLists.txt
RFW/Renderers/MetalRast/: CMakeLists.txt
RFW/Renderers/OptiX6Context/: CMakeLists.txt
RFW/Renderers/TemplateRenderer/: CMakeLists.txt
RFW/Renderers/VkContext/: CMakeLists.txt
RFW/Renderers/VulkanRTX/: CMakeLists.txt
RFW/backends/CPURT/: CMakeLists.txt
RFW/backends/CUDART/: CMakeLists.txt
RFW/backends/EmbreeRT/: CMakeLists.txt
RFW/backends/GLRenderer/: CMakeLists.txt
RFW/backends/OptiX6Context/: CMakeLists.txt
RFW/backends/TemplateRenderer/: CMakeLists.txt
RFW/backends/VkContext/: CMakeLists.txt
RFW/backends/VulkanRTX/: CMakeLists.txt
RFW/system/: CMakeLists.txt
RFW/system/bvh/: CMakeLists.txt
RFW/system/context/: CMakeLists.txt
RFW/system/math/: CMakeLists.txt
RFW/system/utils/: CMakeLists.txt
RenderSystem/: CMakeLists.txt
RenderSystem/src/: Application.cpp  Application.h  AssimpObject.cpp  AssimpObject.h  Camera.cpp  Camera.h  GeometryReference.cpp  GeometryReference.h  InstanceReference.cpp  InstanceReference.h  Internal.h  LightReference.cpp  MaterialList.cpp  MaterialList.h  MathIncludes.cpp  MathIncludes.h  MeshSkin.cpp  MeshSkin.h  Quad.cpp  Quad.h  RenderSystem.cpp  RenderSystem.h  RenderSystemCAPI.cpp  RenderSystemCAPI.h  SceneAnimation.cpp  SceneAnimation.h  SceneMesh.cpp  SceneMesh.h  SceneNode.cpp  SceneNode.h  SceneObject.cpp  SceneObject.h  SceneTriangles.h  Settings.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  gLTFAnimation.cpp  gLTFAnimation.h  (+4 more)
RenderSystem/src/gLTF/: MeshSkin.h  SceneAnimation.cpp  SceneAnimation.h  SceneMesh.cpp  SceneMesh.h  SceneNode.cpp  SceneNode.h  SceneObject.cpp  SceneObject.h  Skinning.cpp  Skinning.h  gLTFObject.cpp  gLTFObject.h
RenderSystem/src/utils/: ArrayProxy.h  Averager.h  Concurrency.h  LibExport.h  Logger.h  MersenneTwister.h  Serializable.h  String.h  ThreadPool.h  Time.cpp  Time.h  Timer.h  Window.h  Xor128.h  gl.h
Renderers/TemplateRenderer/: CMakeLists.txt
Renderers/TemplateRenderer/src/: Context.cpp  Context.h
Renderers/VulkanRTX/: CMakeLists.txt
Renderers/VulkanRTX/shaders/: disney.glsl  lambert.glsl  material.glsl  rt_finalize.comp  rt_shade.comp  rt_shaders.rgen  tools.glsl
Renderers/VulkanRTX/src/: AccelerationStructure.h  Bindings.h  BottomLevelAs.cpp  Buffer.h  CheckVK.h  ComputePipeline.cpp  Context.cpp  Context.h  DescriptorSet.cpp  Image.cpp  Image.h  InteropTexture.cpp  InteropTexture.h  Mesh.cpp  Mesh.h  RtxPipeline.cpp  RtxPipeline.h  Shader.cpp  TopLevelAs.cpp  VmaBuffer.h  VulkanDevice.cpp  VulkanDevice.h
(+510 files in other folders)
