if (WIN32)
	set(embree_DIR "${CMAKE_CURRENT_LIST_DIR}/intel-embree-3.6.1" PARENT_SCOPE)
endif ()
add_subdirectory(glm-9.9.6)
add_subdirectory(glew-2.1.0)
add_subdirectory(FreeImage)
add_subdirectory(half2.1.0)
add_subdirectory(ImGuiWrapper)
add_subdirectory(Assimp)
add_subdirectory(GLFW)
add_subdirectory(OptiX6.5)
add_subdirectory(OptiX7)
add_subdirectory(tinygltf-08-01-2020)
add_subdirectory(VulkanMemoryAllocator-2.2.0)

if (WIN32)
	file(GLOB_RECURSE DLLS *.dll)
	foreach (dll ${DLLS})
		get_filename_component(dllname ${dll} NAME)
		configure_file(${dll} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${dllname} COPYONLY)
	endforeach ()
endif (WIN32)