add_subdirectory(half2.1.0)
add_subdirectory(ImGuiWrapper)
add_subdirectory(OptiX6.5)
add_subdirectory(OptiX7)

if (WIN32)
    file(GLOB_RECURSE DLLS *.dll)
    foreach (dll ${DLLS})
        get_filename_component(dllname ${dll} NAME)
        configure_file(${dll} ${CMAKE_BINARY_DIR}/bin/${dllname} COPYONLY)
    endforeach ()

    file(GLOB_RECURSE PDBS *.dll)
    foreach (pdb ${PDBS})
        get_filename_component(pdbname ${pdb} NAME)
        configure_file(${pdb} ${CMAKE_BINARY_DIR}/bin/${pdbname} COPYONLY)
    endforeach ()
else ()
    file(GLOB_RECURSE SOS *.so*)
    foreach (so ${SOS})
        get_filename_component(soname ${so} NAME)
        configure_file(${so} ${CMAKE_BINARY_DIR}/bin/${soname} COPYONLY)
    endforeach ()
endif ()